# MII

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SETUP.md  docker-compose.yml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  database.py  main.py
backend/app/api/: ai.py  discovery.py  graph.py  identities.py  reports.py  risk.py  security.py
backend/app/collectors/: aws_collector.py  gitlab_collector.py
backend/app/models/: __init__.py  identity.py  identity_access.py  resource.py  trust_relationship.py
backend/app/schemas/: __init__.py  ai.py  discovery.py  graph.py  identity.py  risk.py
backend/app/services/: ai_advisor.py  blast_path_engine.py  compliance_engine.py  findings_engine.py  graph_engine.py  recommendations_engine.py  report_engine.py  resource_mapper.py  risk_engine.py  trust_debt_engine.py  trust_parser.py
backend/app/utils/: retry.py
docs/: LAUNCH-POSTS.md  LINKEDIN-ARTICLE.md  README.md  api-reference.md  architecture.md  blast-path.md  configuration.md  contributing.md  deployment.md  features.md  getting-started.md  risk-scoring.md  trust-debt.md
frontend/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
infra/: backend.tf  main.tf  oidc-demo.tf  terraform.tfvars.example  variables.tf
(+18 files in other folders)
